--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,10 @@ h1 {
 
 .qr-code {
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
+
 
 .qr-code img {
     width: 200px;
